[project]
name = "rc-toolkit"
version = "0.2.2"
description = ""
authors = [
    {name = "break-soul", email = "57186766+break-soul@users.noreply.github.com"},
]
license = {text = "MIT"}
dependencies = ["zstandard>=0.23.0"]
requires-python = ">=3.8"
readme = "README.md"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
