[project]
name = "rc-toolkit"
version = "0.2.6"
description = ""
authors = [
    { name = "break-soul", email = "57186766+break-soul@users.noreply.github.com" },
]
license = { text = "MIT" }
dependencies = ["backports.zstd ; python_version<'3.14'"]
requires-python = ">=3.9"
readme = "README.md"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
